# ortools

./: .clang-format  .gitignore  .npmignore  CMakeLists.txt  README.html  README.md  README_cn.md  demo.cc  gen_config.yaml  headerreplace.js  help.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
cmake/: Findortools.cmake
cppsrc/: addon.cpp  commonheader.hpp
cppsrc/operations_research/: Func.hpp  GClosedInterval.hpp  GDomain.hpp  GLinearExpr.hpp  GLinearRange.hpp  GMPConstraint.hpp  GMPObjective.hpp  GMPSolver.hpp  GMPSolverWorker.hpp  GMPVariable.hpp  GOrToolsVersion.hpp  exports.hpp
doc/nodeaddonapi/: 0_addon.md  0_array.md  0_array_buffer.md  0_async_context.md  0_async_operations.md  0_async_worker.md  0_async_worker_variants.md  0_bigint.md  0_boolean.md  0_buffer.md  0_callback_scope.md  0_callbackinfo.md  0_checker-tool.md  0_class_property_descriptor.md  0_cmake-js.md  0_dataview.md  0_date.md  0_env.md  0_error.md  0_error_handling.md  0_escapable_handle_scope.md  0_external.md  0_function.md  0_function_reference.md  0_handle_scope.md  0_instance_wrap.md  0_maybe.md  0_memory_management.md  0_name.md  0_number.md  0_object_lifetime_management.md  0_object_reference.md  object.md  object_wrap.md  promises.md  property_descriptor.md  reference.md  setup.md  threadsafe.md  type_taggable.md  (+1 more)
src/: addon.cpp  assignment_groups_mip.cc  commonheader.hpp  index.cpp  index.d.ts  index.hpp  index.js  index.ts  nodeaddon.ts  or.cpp  or.hpp  or_sat.cpp  or_sat.hpp  ortools001.cpp  ortools001.hpp  temp.hpp
src/absl/: Demo.hpp  GDuration.d.ts  GDuration.hpp  GStatus.d.ts  GStatus.hpp
src/operations_research/: A.hpp  Demo.hpp  Domain.d.ts  Domain.hpp  Enum.d.ts  Enum.hpp  Func.d.ts  Func.hpp  GConstraint.d.ts  GConstraint.hpp  GDecisionBuilder.d.ts  GDecisionBuilder.hpp  GDemo copy 4.hpp  GDemo.d copy 9.ts  GDemo.d.ts  GDemo.hpp  GDomain.d.ts  GDomain.hpp  GEnum.d.ts  GEnum.hpp  GFunc.d.ts  GFunc.hpp  GFunc.ts  GIntVar.d.ts  GIntVar.hpp  GIntervalVar.d.ts  GIntervalVar.hpp  GLinearExpr.d.ts  GLinearExpr.hpp  GLinearExpr.ts  GLinearRange.d.ts  GLinearRange.hpp  GLinearRange.ts  GMPCallback.d.ts  GMPCallback.hpp  GMPConstraint.d.ts  GMPConstraint.hpp  GMPConstraint.ts  GMPModelProto.d.ts  GMPModelProto.hpp  (+57 more)
src/test/: assignment_groups_mip.test.ts  assignment_groups_sat.test.ts  assignment_linear_sum_assignment.cc  assignment_linear_sum_assignment.test.ts  assignment_min_flow.cc  assignment_min_flow.test.ts  assignment_mip.test.ts
temp/: A.hpp  A.md
test/: 001.hpp  001.test.ts  assignment_groups_mip.cc  assignment_groups_mip.test.ts  assignment_groups_sat.cc  assignment_groups_sat.test.ts  assignment_linear_sum_assignment.cc  assignment_linear_sum_assignment.test.ts  assignment_min_flow.test.ts  assignment_mip.cc  assignment_mip.test.ts  assignment_sat.cc  assignment_task_sizes_mip.cc  assignment_task_sizes_sat.cc  assignment_teams_mip.cc  assumptions_sample_sat.test.ts  basic_example.test.ts  basic_example_mo.test.ts  bin_packing_mip.cc  binpacking_2d_sat.cc  binpacking_2d_sat.test.ts  binpacking_2d_sat.test.txt  bool_or_sample_sat.cc  ceshi.js  channeling_sample_sat.test.ts  constraint_programming_cp.test.ts  copy_model_sample_sat.test.ts  costas_array_sat.test.ts  cp_sat_example.test.ts  temp.hpp  test.js  test.ts  ts.test.ts
test/assignment_groups_mip/: assignment_groups_mip.cc
test/assignment_groups_sat/: assignment_groups_sat.cc
test/bfs_directed/: CMakeLists.txt
test/bfs_one_to_all/: CMakeLists.txt
test/bfs_undirected/: CMakeLists.txt
test/cp_sat_example/: cp_sat_example.cc
test/dag_constrained_shortest_path_sequential/: CMakeLists.txt
test/dag_multiple_shortest_paths_sequential/: CMakeLists.txt
test/dag_shortest_path_one_to_all/: CMakeLists.txt
test/dag_shortest_path_sequential/: CMakeLists.txt
test/dag_simple_shortest_path/: CMakeLists.txt
test/dijkstra_all_pairs_shortest_paths/: CMakeLists.txt
test/dijkstra_sequential/: CMakeLists.txt
test/dijkstra_undirected/: CMakeLists.txt
test/ll/: assignment_linear_sum_assignment.test.ts  assignment_min_flow.test.ts  assignment_mip.test.ts  assignment_sat.test.ts  assignment_task_sizes_mip.test.ts  cp_sat_example.test.ts
test/network_design_ilph/: CMakeLists.txt
test/network_design_ilph_main/: CMakeLists.txt
test/network_design_ilph_test/: CMakeLists.txt
test/ok/: assignment_groups_mip.test.ts  assignment_groups_sat.test.ts  assignment_linear_sum_assignment.test.ts  assignment_min_flow.test.ts  assignment_mip.test.ts  assignment_sat.test.ts  assignment_task_sizes_mip.test.ts  assignment_task_sizes_sat.test.ts  assignment_teams_mip.test.ts  assignment_teams_sat.test.ts  assumptions_sample_sat.test.ts  balance_min_flow.test.ts  basic_example.test.ts  bin_packing_mip.test.ts  binpacking_2d_sat.test.ts  (+6 more)
tssrc/: index.ts  nodeaddon.ts
(+368 files in other folders)
